--- a/src/tf_interfaces/package.xml
+++ b/src/tf_interfaces/package.xml
@@ -12,18 +12,21 @@
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>vision_msgs</build_depend>
-
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>vision_msgs</exec_depend>
-
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
   </export>
+
+  <depend>rclpy</depend>
+    <depend>sensor_msgs</depend>
+  <depend>vision_msgs</depend>
+
+  <build_depend>rosidl_default_generators</build_depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 </package>
